--- a/wp-content/themes/tcs-responsive/js/app/challenges/css/ngchallenges.css
+++ b/wp-content/themes/tcs-responsive/js/app/challenges/css/ngchallenges.css
@@ -78,7 +78,7 @@
 }
 
 .challengesGrid .challengeCell .colDur {
-    line-height: 110px;
+    line-height: normal;
     vertical-align: middle;
 }
 
